# parametrik

./: .gitignore  .gitmodules  Cargo.toml
cli/: Cargo.toml
cli/src/: config.rs  main.rs
core/: Cargo.toml
data/: Cargo.toml
data/migrations/2019-10-26-204501_create_users/: up.sql
data/migrations/2019-10-27-160250_user_email_unique/: down.sql  up.sql
data/src/: config.rs  lib.rs  main.rs  models.rs  schema.rs
data/src/auth/: mod.rs  routes.rs  token.rs
data/src/models/: test_helpers.rs  user.rs
data/src/users/: models.rs  routes.rs
