[package]
name = "parametrik_cli"
version = "0.1.0"
authors = ["Scott Trinh <scott@scotttrinh.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9"
structopt = "0.3"
dialoguer = "0.5"
serde = "1.0"
serde_json = "1.0"
