[package]
name = "parametrik-data"
version = "0.1.0"
authors = ["Scott Trinh <scott@scotttrinh.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres"] }
diesel_migrations = "1.4.0"
assert_matches = "1.3.0"
dotenv = "0.15.0"
scrypt = "0.2.0"
parametrik-core = { path = "../core" }