[package]
name = "parametrik_data"
version = "0.1.0"
authors = ["Scott Trinh <scott@scotttrinh.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "1.4.0"
assert_matches = "1.3.0"
dotenv = "0.15.0"
scrypt = "0.2.0"
chrono = "0.4"
actix-web = "1.0.8"
actix-identity = "0.1"
env_logger = "0.7.1"
serde = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
futures = "0.1"
jsonwebtoken = "6"
csrf = "0.3"
lazy_static = "1.4"